--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,8 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 28px;
+    height: 100vh;
+    
 
 
 
@@ -22,7 +24,7 @@ body {
 span {
     color: hsl(150, 100%, 66%);
     font-size: 15px;
-    margin-top: -10%;
+    margin-top: -15px;
 
 }
 
@@ -32,11 +34,11 @@ span {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 470px;
-    height: 300px;
+    width: 480px;
+    height: 320px;
     border-radius: 20px;
     background-color: hsl(217, 19%, 24%);
-    margin-top: 250px;
+    /* margin-top: 250px; */
     
     
 }
@@ -53,13 +55,13 @@ span {
 
     #txtAdvice{
         width: 300px;
-        height: 220px;
+        height: 180px;
     }
 
     .botao{
         width: 70px;
         height: 70px;
-        margin-bottom: -95px;
+        margin-bottom: -82px;
         margin-left: -50px;
         
     }
@@ -69,7 +71,7 @@ p {
     
     width: 400px;
     height: 100px;
-    margin-bottom: 50px;
+    margin-bottom: 90px;
 }
 
 .line {
@@ -81,7 +83,7 @@ p {
 .botao {
     background-color: hsl(150, 100%, 66%);
     position: absolute;
-    margin-top: 303px;
+    margin-top: 318px;
     margin-left: -5px;
     cursor: pointer;
     width: 50px;
